Code review changes * Keep the default style for select-react-plus, remove overriding ones * Add automated changes for `yarn.lock` * Fix the broken image path in `language_picker.jsx` * Remove the overflow:hidden from nav.top-nav in `_nav.styl` ** This helps in not hiding the dropdown menu

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -3,7 +3,6 @@ nav.top-nav
   z-index 100
   background-color white
   border-bottom 1px solid rgba(0,0,0,.1)
-  overflow hidden
   width 100%
   font-size 15px
   -webkit-font-smoothing antialiased
@@ -80,7 +79,6 @@ nav.top-nav
 
   span
     display inherit
-    cursor pointer
 
 .top-nav__main-links
   display flex
